# file_transfer

./: CMakeLists.txt  README.md  run_client.bat  run_server.bat
include/: client.h  client_connection.h  file_transfer.h  observer.h  reading.h  server.h  server_connection.h  stream.h
src/: client.cpp  client_connection.cpp  file_transfer.cpp  main_client.cpp  main_server.cpp  observer.cpp  reading.cpp  server.cpp  server_connection.cpp  stream.cpp
unit-test/: CMakeLists.txt  client_test.cpp  run_client_test .bat  run_server_test.bat  server_test.cpp
